--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
