--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@realm/react": "^0.6.2",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.73.6",
@@ -22,8 +23,10 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "realm": "^12.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
