--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
 PORT_NO=4000
- MONGO_URL=mongodb+srv://akanshagarwalalwar:8FNPVpGtRKJ9WQgd@cluster.pdqdm4n.mongodb.net/
+MONGO_URL=mongodb+srv://akanshagarwalalwar:8FNPVpGtRKJ9WQgd@cluster.pdqdm4n.mongodb.net/
+JWT = jsonwebtoken
